Schimbari minore la style + navbar

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <div id="app"></div>
 
     <!-- credits -->
-    <div class="text-center">
+    <div class="text-center credits">
         <p>
            Welcome to  <a href="/" target="_top">LifeBeat</a>
         </p>
@@ -23,5 +23,9 @@
 <style scoped>
     body {
         background-color: #001c8026;
+    }
+
+    #credits {
+        height: 10px;
     }
 </style>
